--- a/design/src/main/res/values-zh/strings.xml
+++ b/design/src/main/res/values-zh/strings.xml
@@ -87,4 +87,43 @@
     <string name="billing_error_unavailable">产品不可用。</string>
     <string name="billing_error_already_owned">您已拥有此产品。</string>
     <string name="billing_error_network">发生网络错误。</string>
+
+    <!-- Subscription Management Screen -->
+    <string name="subscription_management_title">订阅管理</string>
+    <string name="subscription_management_google_play">在Google Play管理</string>
+    <string name="subscription_management_help_title">需要帮助吗？</string>
+    <string name="subscription_management_help_desc">订阅相关问题请联系Google Play客服。</string>
+    <string name="subscription_management_no_subscription">没有有效订阅</string>
+    <string name="subscription_management_no_subscription_desc">订阅高级版享受无广告体验</string>
+    <string name="subscription_management_view_plans">查看订阅计划</string>
+    <string name="subscription_management_premium_member">高级会员</string>
+    <string name="subscription_management_active_status">有效</string>
+    <string name="subscription_management_next_billing">下次付款日期</string>
+    <string name="subscription_management_info_title">订阅信息</string>
+    <string name="subscription_management_start_date">订阅开始日期</string>
+    <string name="subscription_management_payment_method">支付方式</string>
+    <string name="subscription_management_google_play_payment">Google Play支付</string>
+    <string name="subscription_management_auto_renewal">自动续订</string>
+    <string name="subscription_management_auto_renewal_desc">每月自动续订。</string>
+    <string name="subscription_management_one_time_payment">一次性付款</string>
+    <string name="subscription_management_one_time_payment_desc">下个月不会自动续订。</string>
+
+    <!-- Subscription Screen -->
+    <string name="subscription_title">高级订阅</string>
+    <string name="subscription_header_title">享受无广告体验</string>
+    <string name="subscription_header_desc">升级到高级版，享受无广告体验</string>
+    <string name="subscription_benefits_title">高级特权</string>
+    <string name="subscription_benefit_ad_removal">去除广告</string>
+    <string name="subscription_benefit_ad_removal_desc">移除所有广告，畅享无中断体验</string>
+    <string name="subscription_monthly_plan">月度订阅</string>
+    <string name="subscription_monthly_plan_desc">每月自动续订</string>
+    <string name="subscription_price_unit">/ 月</string>
+    <string name="subscription_price_unavailable">无法获取价格</string>
+    <string name="subscription_auto_renewal_notice">自动续订：订阅每月自动续订，可随时取消。</string>
+    <string name="subscription_subscribe_now">立即订阅</string>
+    <string name="subscription_already_purchased_header">您已购买此商品。</string>
+    <string name="subscription_already_purchased_content">不能重复购买。</string>
+    <string name="subscription_footer_managed_by">• 订阅通过Google Play管理。</string>
+    <string name="subscription_footer_auto_renewal">• 如果在订阅期结束前24小时内未取消，订阅将自动续订。</string>
+    <string name="subscription_footer_refund_policy">• 退款政策遵循Google Play政策。</string>
 </resources>
